# rust-kafka-like

./: .deepsource.toml  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  messages.txt
.github/workflows/: rust.yml
benches/: benchmark.rs
examples/: auth-example.rs  auth-send-recv.rs  encrypt-send-recv.rs  idempotence-send-recv.rs  mulch-send-recv.rs  send-recv-example.rs  send_receive.rs  simple-send-recv.rs  thread-send-recv.rs
src/: lib.rs  main.rs  web_console.rs
src/auth/: authentication.rs  authorization.rs  mod.rs  tests.rs  token.rs
src/broker/: cluster.rs  error.rs  log_compression.rs  message_queue.rs  mod.rs  node_management.rs  scaling.rs  storage.rs  topic.rs  transaction.rs
src/broker/consumer/: group.rs
src/broker/leader/: election.rs  heartbeat.rs  mod.rs  state.rs
src/crypto/: mod.rs
src/message/: ack.rs
src/pubsub/: broker.rs  message.rs
src/schema/: mod.rs
src/schema/compatibility/: mod.rs
src/schema/registry/: mod.rs
src/schema/version/: mod.rs
src/subscriber/: types.rs
src/tests/: broker_tests.rs
