[package]
name = "pilgrimage"
version = "0.4.0"
edition = "2024"
authors = ["Kenny Miller Song"]
description = "A Kafka-like message broker in Rust"
readme = "README.md"
repository = "https://github.com/mila411/rust-kafka-like"
license = "MIT"
keywords = ["kafka", "message", "broker", "rust"]
categories = ["rust-patterns"]

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simplelog = "0.9"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
opt-level = 3
