[package]
name = "pilgrimage"
version = "0.8.6"
edition = "2024"
authors = ["Kenny Miller Song"]
description = "A Kafka-like message broker in Rust"
readme = "README.md"
repository = "https://github.com/mila411/rust-kafka-like"
license = "MIT"
keywords = ["kafka", "message", "broker", "rust"]
categories = ["rust-patterns"]

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simplelog = "0.9"
aes-gcm = "0.10.3"
rand = "0.8.5"
jsonwebtoken = "8.1.1"
tempfile = "3.2"
flate2 = "1.0.35"

[dev-dependencies]
criterion = "0.3"
tempfile = "3.2"

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
opt-level = 3
